# Revolutionising-Medical-Note-Taking

./: requirements.txt
ai_service_platform/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ai_service_platform/docs/: MIGRATION.md  README.md
ai_service_platform/src/: __init__.py  main.py
ai_service_platform/src/api/: __init__.py  middleware.py  routes.py
ai_service_platform/src/core/: __init__.py  auth.py  config.py  usage.py
ai_service_platform/src/db/: __init__.py  database.py  session.py
ai_service_platform/src/models/: schemas.py
ai_service_platform/src/providers/: base.py  huggingface.py  openai.py
ai_service_platform/src/services/: __init__.py  rag.py
ai_service_platform/src/vectorstores/: base.py  pinecone.py
data/raw/processed_pdfs/: Gale Encyclopedia of Medicine Vol. 1 (A-B).txt  Int.medicine_-_Harrison_Self_Assessment_and_Board_Review-17_th.txt
medical_rag_backend/: manage.py
medical_rag_backend/medical_rag_backend/: asgi.py  settings.py  urls.py  wsgi.py
medicalenv/: pyvenv.cfg
src/: main.py  main_ws.py
src/embeddings/: embed_and_store_pinecone.py  embed_pinecone_hf.py
src/ingestion/: pdf_parser.py  website_scraper.py
src/ingestion/data/raw/processed_websites/: www.cdc.gov_flu_professionals_.txt
src/rag/: retriever.py  summarizer.py  summarizer_hf.py
src/speech/: realtime_rag_hf.py  stt_hf.py
