[tool.poetry]
name = "ai-service-platform"
version = "0.1.0"
description = "Multi-tenant AI Service Provider Platform"
authors = ["AI Startup <hello@aiplatform.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.0"
asyncpg = "^0.29.0"
redis = "^5.0.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.1.0"
httpx = "^0.26.0"
python-multipart = "^0.0.6"

# AI Providers
openai = "^1.10.0"
anthropic = "^0.18.0"
huggingface-hub = "^0.20.0"
pinecone-client = "^3.0.0"
qdrant-client = "^1.7.0"

# Document Processing
pypdf = "^3.17.0"
python-docx = "^1.1.0"
beautifulsoup4 = "^4.12.0"
python-magic = "^0.4.27"

# Storage
boto3 = "^1.34.0"
aiofiles = "^23.2.0"

# Observability
structlog = "^24.1.0"
opentelemetry-api = "^1.22.0"
opentelemetry-sdk = "^1.22.0"

# Utilities
python-dotenv = "^1.0.0"
tenacity = "^8.2.0"
aiohttp = "^3.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^24.1.0"
isort = "^5.13.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[tool.poetry.scripts]
ai-platform = "src.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
